# rag-saas-docs-ingestion-poc

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  architecture.md  auth-implementation.patch  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  db.py  main.py  worker.py
app/api/: analytics.py  auth.py  documents.py  evaluation.py  jobs.py  model_status.py  query.py
app/auth/: __init__.py  dependencies.py  jwks.py  models.py  service.py  tokens.py
app/eval/: __init__.py  history.py  run.py
app/rag/: __init__.py  analytics.py  backfill_vectors.py  cache.py  chunking.py  cleanup_ops_history.py  cleanup_upload_sessions.py  embeddings.py  ingestion.py  jobs.py  minio_lifecycle.py  parsers.py  (+12 more)
docs/: architecture copy.md  architecture.md  current-status.md  deployment-hardening.md  flow-diagrams.md  github-export.md  kpis.md  local-model-deployment.md  model-providers.md  retrieval-evaluation.md  runbook.md  setup.md  week1-plan.md  week2-plan.md  week3-plan.md  week4-plan.md  week5-plan.md  week6-plan.md  week7-plan.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts
tests/: conftest.py  test_analytics.py  test_api_e2e.py  test_auth.py  test_cache.py  test_chunking.py  test_config.py  test_eval.py  test_ingest_paths.py  test_jobs.py  test_minio_lifecycle.py  test_model_providers.py  test_model_status.py  test_parsers.py  test_pipeline.py  test_reranking.py  test_retention.py  test_retrieval.py  test_upload_sessions.py  test_vector_backfill.py
(+41 files in other folders)
