[project]
name = "rag-saas-docs-ingestion-poc"
version = "0.1.0"
description = "Open-source SaaS RAG document ingestion proof of concept"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "python-multipart>=0.0.9",
  "redis>=5.0.4",
  "pyjwt[crypto]>=2.8.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
parsing = [
  "pymupdf>=1.24.0",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.2",
  "pytesseract>=0.3.10",
  "pillow>=10.3.0",
]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
